--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -17,5 +17,9 @@
         android:id="@+id/saranFragment"
         android:name="org.d3if4001.hitungbmi.ui.SaranFragment"
         android:label="SaranFragment"
-        tools:layout="@layout/fragment_saran"/>
+        tools:layout="@layout/fragment_saran">
+        <argument
+            android:name="Kategori"
+            app:argType="org.d3if4001.hitungbmi.data.KategoriBmi" />
+    </fragment>
 </navigation>
